--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Estate Planning Online</title>
+  <title>Senior Care Resources Online</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="google-signin-client_id" content="733820818592-r3j791k1poec1lpjiuftve02j044i7r6.apps.googleusercontent.com">
